# xuanpin-ai

./: .env.example  .gitignore  Dockerfile  LOCAL_RUN_GUIDE.md  PHASE43_ADMIN_API_COMPLETE.md  PHASE43_ADMIN_API_DESIGN.md  PHASE43_WEB_ARCHITECTURE_REPORT.md  PHASE_10_1_SUMMARY.md  README.md  daily_run.bat  docker-compose.yml  login_taobao.py  login_xiaohongshu.py  main.py  pyproject.toml  start_xuanpin.bat  startup.py  test_full_task.py  test_smoke_crawl.py  日报）
app/: __init__.py  cli.py
config/: feishu.json  selection_config.json
examples/: matching_evaluation.json
scripts/: diagnose_taobao_page.py  login_taobao.py  phase16_8_shop_validation.py  phase18_2_full_pipeline_validation.py  phase18_2_real_pipeline.py  phase21_production_run.py
tests/: test_admin_api.py  test_ai.py  test_ai_analysis.py  test_analyzer.py  test_api.py  test_assistant_api.py  test_assistant_llm.py  test_assistant_service.py  test_assistant_strategy.py  test_browser_manager.py  test_browser_retry.py  test_cli.py  test_competition.py  test_cookie_manager.py  test_crawl_job.py  test_crawl_log.py  test_crawl_session.py  test_crawler.py  test_crawler_enhance.py  test_crawler_status.py  test_daily_pipeline.py  test_daily_recommendation.py  test_daily_report.py  test_daily_report_save.py  test_daily_selection_analyzer.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_api_phase9.py  test_dashboard_service.py  test_dashboard_task_api.py  test_decision_engine.py  test_diagnose_browser_env.py  test_diagnose_taobao_page.py  test_dynamic_score.py  test_execution_logger.py  test_health.py  (+91 more)
(+343 files in other folders)
